--- a/static/index.html
+++ b/static/index.html
@@ -68,7 +68,7 @@
             </div>
             <div class="mb-3">
                 <label for="user_agent" class="form-label">User Agent</label>
-                <input type="" class="form-control" id="user_agent" name="user_agent" value="Mozilla/5.0">
+                <input type="text" class="form-control" id="user_agent" name="user_agent" value="Mozilla/5.0">
             </div>
             <button type="submit" class="btn btn-primary" id="start-btn">Start Scan</button>
             <button type="button" class="btn btn-danger" id="stop-btn" disabled>Stop Scan</button>
